--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@koa/router": "^10.0.0",
+    "@makeflow/power-app": "^0.3.0-wip.15",
+    "@makeflow/power-app-koa": "^0.3.0-wip.12",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "leancloud-storage": "^4.11.1",
